[gd_scene load_steps=17 format=3 uid="uid://cjjv3488swmh2"]

[ext_resource type="Script" path="res://environment/scripts/turret.gd" id="1_6p426"]
[ext_resource type="ArrayMesh" uid="uid://bs3i0h7050jhc" path="res://environment/models/turret.mesh" id="1_vckyp"]
[ext_resource type="PackedScene" uid="uid://c7wnji0axaya3" path="res://ui/healthbar.tscn" id="2_h3doq"]
[ext_resource type="PackedScene" uid="uid://bv1yffxbq46ix" path="res://effects/tower_blast.tscn" id="2_lnw6l"]
[ext_resource type="ArrayMesh" uid="uid://dfsx34bcg0mc1" path="res://environment/models/crystal.mesh" id="2_ota7h"]
[ext_resource type="Material" uid="uid://bovn7x34hbpks" path="res://effects/red_glow.tres" id="3_vg8kb"]
[ext_resource type="PackedScene" uid="uid://cy5tox8freods" path="res://effects/crystal_explode.tscn" id="5_8bvoy"]
[ext_resource type="Script" path="res://environment/scripts/crystal_spin.gd" id="6_om0h8"]
[ext_resource type="Script" path="res://scripts/states/_state_machine.gd" id="8_bkjyw"]
[ext_resource type="Script" path="res://scripts/states/obj_scan.gd" id="9_f808b"]
[ext_resource type="Script" path="res://scripts/states/obj_attack.gd" id="10_acupl"]
[ext_resource type="Script" path="res://scripts/states/obj_dead.gd" id="11_h6urx"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gjad5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_te2n1"]
radius = 0.6

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fmh56"]
radius = 5.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5frdt"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:team")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:id")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:health")
properties/4/spawn = true
properties/4/replication_mode = 1

[node name="Turret" type="StaticBody3D" groups=["Objective", "Unit"]]
collision_layer = 513
script = ExtResource("1_6p426")
projectile = ExtResource("2_lnw6l")

[node name="TargetRay" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 3.36642, 0, 0, 0, 1, 0, 3.95124, 0)
visible = false
material_override = ExtResource("3_vg8kb")
mesh = SubResource("CapsuleMesh_gjad5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
mesh = ExtResource("1_vckyp")

[node name="CrystalExplode" parent="MeshInstance3D" instance=ExtResource("5_8bvoy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.76394, 0)

[node name="Crystal" type="MeshInstance3D" parent="MeshInstance3D"]
mesh = ExtResource("2_ota7h")
script = ExtResource("6_om0h8")

[node name="Healthbar" parent="." instance=ExtResource("2_h3doq")]

[node name="NavmeshCollider" type="StaticBody3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 2.36093, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavmeshCollider"]
shape = SubResource("CylinderShape3D_te2n1")

[node name="AttackArea" type="Area3D" parent="."]
collision_layer = 512

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(-1, -1.50996e-07, 0, 1.50996e-07, -1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_fmh56")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_5frdt")

[node name="AttackTimer" type="Timer" parent="."]

[node name="Projectiles" type="Node" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://effects/tower_blast.tscn")
spawn_path = NodePath("../Projectiles")
spawn_limit = 100

[node name="UnitCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 2.36093, 0)
shape = SubResource("CylinderShape3D_te2n1")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("8_bkjyw")
initial_state = NodePath("obj_scan")

[node name="obj_scan" type="Node" parent="StateMachine"]
script = ExtResource("9_f808b")

[node name="obj_attack" type="Node" parent="StateMachine"]
script = ExtResource("10_acupl")

[node name="obj_dead" type="Node" parent="StateMachine"]
script = ExtResource("11_h6urx")
